feat: add view model to UserDetailFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Drinder</string>
 
     <!-- Screen Titles   -->
-    <string name="title_map_screen">Drinder - Map of drinkers</string>
+    <string name="title_map_screen">Drinder - Map of Drinkers</string>
     <string name="title_profile_screen">Drinder - User Profile</string>
     <string name="title_login_screen">Drinder - Login</string>
     <string name="title_registration">Drinder - Registration</string>
@@ -36,5 +36,6 @@
     <string name="error_age_too_big">Sorry, but u are not a record holder</string>
     <string name="error_save_data">Save data error</string>
     <string name="error_gps_permission">You didn\'t give permission to access your location</string>
+    <string name="error_unable_receive_profile">Error due profile request. Check your internet connection and retry</string>
 
 </resources>
