feat: add dark theme support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="edit_profile">Edit profile</string>
     <string name="share_location">Share location</string>
     <string name="marker_drinker">Drinker number</string>
+    <string name="menu_title_change_theme">Change Theme</string>
 
 
     <!-- Error Text   -->
